asset/css/style.css
:root {
    --darkBlue : #0065FC;
    --clearBlue: #DEEBFF;
    --greyBackgd : #F2F2F2;
    --starsGrey : #c2bdbdb0;
    --fontRlw : 'Raleway', sans-serif;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}


body {
    font-family: var(--fontRlw);     
}

/* stars colors */
i[data-selected="true"] {
    color: var(--darkBlue);
}

i[data-selected="false"] {
    color: var(--starsGrey);
} 
/* --- */
a {
    text-decoration: none;
    color: inherit;
    font-family: var(--fontRlw);
}

/*---------------------------- header----------------------------- */
.header {
    display: grid;
    align-items: center;
    grid-template-columns: auto 1fr auto  auto;
    grid-template-areas: "img img nav link";
    max-width: 1500px;
    margin: auto;
}

.imgHeader {
    grid-area: img;
    padding: 0 0.5rem;
}

.navbarHeader {
    display: flex;
    align-items: center;
    grid-area: nav;
    justify-content: end;
    margin-right: 2.5em;
}

.navbarHeader a {
    padding: 1.5em 2.5em;
    border-top: 2px transparent solid;
    border-bottom: 2px transparent solid;
}

.navbarHeader a:hover{
    transition: color 0.3s;
    transition: border-top 0.5s;
    border-top: 2px solid var(--darkBlue);
    color: var(--darkBlue)
}

.navbarHeader a[data-active='true']{
    border-top: 2px solid var(--darkBlue);
    color: var(--darkBlue);

}

.register {
    color: var(--darkBlue);
    font-weight: bold;
}

.register:hover {
    transition: color .3s;
    color: #043681;

}

/*-------------------------main------------------------- */
main {
    max-width: 1500px;
    margin: auto;
}
/* section search */
.searchHeaderTitle {
    font-size: 1.5rem;
    font-weight: 800;
    padding: 0.5em 0;
}

.searchHeaderDescr {
    font-size: 1rem;
}

/* searchDivInput */
.searchDivInput {
    margin-top: 1.3rem;
}

.searchLabel {
    padding: 0.8rem 1.25rem;
    border-radius: 1rem 0 0 1rem;
    background-color: var(--greyBackgd);
    text-align: center;
}
.searchIcone{
   font-size: 1rem;
}

.searchInput {
    padding: 0.8rem 1rem;
    border-top: 1px solid var(--greyBackgd);
    border-left: 1px solid var(--greyBackgd);
    border-bottom: 1px solid var(--greyBackgd);
    font-weight: 800;
    border-right: none;
    border-left: none;
    border-color: var(--greyBackgd);
    font-family: var(--fontRlw);
    font-size: 1rem;  
}


 .searchInput::placeholder {
    
    color: #00000069;

}

.searchButton {
    padding: 0.8rem 1rem;
    border-radius: 0 1rem 1rem 0;
    background-color: var(--darkBlue);
    color: #fff;
    font-weight: 800;
    font-family: inherit;
    font-size: 1rem;
    border: none;
}

.searchButton:hover{
    cursor: pointer;
    background-color: #043681;
    transition: background-color.3s;
}

/* searchFilterDiv */

.searchFilterDiv {
    margin-top: 1.3rem;
    display: flex;
    align-items: center;
}

.searchFilterP {
    font-size: 1.1rem;
    font-weight: 800;
}

.searchWrapperButton {
    margin-left: 1em;
}

.searchDivButton {
    border-radius: 2rem;
    padding: .8rem 1rem;
    background-color: transparent;
    position: relative;
    border: 2px solid var(--greyBackgd);
}

.searchDivButton:hover {
    cursor: pointer;
}

.searchBubble {
    display: inline-block;
    position: absolute;
    top: -2px;
    left: -2px;
    height: 2.9rem;
    width: 2.9rem;
    background-color: var(--clearBlue);
    border-radius: 2rem;
    text-align: center;
    
}

.searchBubble:hover {
    background-color: #9ebbe6;
    transition: background-color .3s;
}


.searchP {
    display: inline;
    font-size: 1rem;
    padding: 0;
    font-weight: 800;
    margin-left: 2.6em;
    margin-right: auto;
    font-family: var(--fontRlw);
}

.filterIcone {
    color: var(--darkBlue);
    font-size: 1.2rem;
    margin-top: 13px;
}

/* searchAvailable */

.searchAvailable {
    margin-top: 1.3rem;
}

.searchAvailableP {
    display: inline-block;
}

.searchAvailableBubble{
    width: 20px;
    height: 20px;
    padding: 0.25em 0.5em;
    border: 1px solid var(--greyBackgd);
    border-radius: 50%;
    text-align: center;
}

.availableIcon {
    color: var(--darkBlue);
    font-size: 0.8em;
    padding: 0.2em;
}

.searchAvailableInfo {
    display: inline;
    font-size: 0.9rem;
    margin-left: 0.3em;
}

/* container of sections */

.hostingPopularAndActivityContainer {
    margin-top: 1.3rem;
    display: grid;
    grid-template-columns: repeat(3, 33%);
    grid-template-areas: "hosting hosting popular"
                         "activity activity activity";
}

/* hostingSection */

.hostingSection {
    background-color: var(--greyBackgd);
    grid-area: hosting;
    border-radius: 2%;
    border: 1px solid green;
 
}

.hostingTitle {
    padding: 2em .5em 1em .5em;
    margin-left: 2.2em;
    font-size: 1.30rem;
    font-weight: 800;
}

.hostingCardContainer {
    padding: 0.1em;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    column-gap: 1.8rem;
    row-gap: 1.8rem;
    border: 1px solid blue;
}

.hostingCard {
    padding: 0.5em;
    border: 1px solid red;
    border-radius: 1em;
    background-color: #FFF;
    z-index: 3; 
    box-shadow: 5px 5px 5px rgb(185, 183, 183); 
}
.hostingLinkCard {
    display: flex;
    flex-direction: column;
}

.hostingImgContainer {
    border-radius: 1rem 1rem 0 0;
    width: 250px;
    height: 110px;
}

.hostingPicture {
    object-fit: cover;
    width: 100%;
    height: 100%;
    border-radius: 1rem 1rem 0 0;
}

.hostingCardTitle {
    font-size: 1rem;
    font-weight: 800;
    padding: 0.3em 0.3em;
}

.hostingCardNight {
    padding: 0.3em 0.3em;
}

.hostingStarDiv {
    padding: 0.2em 0.3em;
}

.hostingLinkDisplayMore {
    font-size: 0.9rem;
    font-weight: 500;
    margin: 1.2em 0 0 2.2em;
    padding: 1em;
}

.hostingLink {
    font-weight: bold;
}

/* popularSection */

.popularSection {
    background-color: var(--greyBackgd);
    border-radius: 2%;
    border: 1px solid blue;
    grid-area: popular;
    padding: 0 2rem;
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    max-width: 470px;
    margin-left: 20px;
}

.popularTitle {
    padding: 2em 0 1em 0;
    font-size: 1.30rem;
    font-weight: 700;
    float: left;
}

.polularTitleDiv {
  width: 100%;
}

.popularContainIcon {
    padding: 2.5em 0 1em 0;
    float: right;
}

.popular-line-chart {
    font-size: 1em;
}

.popularContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 1.8rem;
   border: 1px solid red;
  
}

.popularCard {
    border-radius: 1rem;
    border: 7px solid #FFF;
    max-width: 400px;
    min-width: 400px;
    background-color: #FFF;
    box-shadow: 5px 5px 5px rgb(185, 183, 183);    
}

.popularLinkImg {
    display: flex;
} 

.popularImgContainer {
    border-radius: .7rem 0 0 .7rem;
    min-width: 35%;
    max-width: 35%;
    height: 115px;
}

.popularImg {
    width: 100%;
    height: 100%;
    border-radius: .7rem 0 0 .7rem;
    object-fit: cover;
}

.popularCardText {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.popularCardTitle {
    padding: .3em .8em;
    font-size: 1rem;
    font-weight: 700;
}

.popularCardNight {
    padding: .3em .8em;
}

.popularStarDiv {
    padding: .3em .8em;

}

/* activitySection */

.activitySection {
    grid-area: activity;
    width: 100%;
    border: 1px solid yellow;
    max-width: 1500px;
    margin:auto;
    margin-top: 50px;
}

.activityTitle {
    padding: 1em 1em;
    font-size: 1.30rem;
    font-weight: 700;
    font-family: var(--fontRlw);
}

.activityContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
    margin: auto;
    border: 1px solid olive;
    
}

.activityContainer article {
    border: 7px solid #FFF;
    border-radius: 1rem;
    box-shadow: 5px 5px 5px rgb(185, 183, 183);

}

.activityImgContainer {
    width: 100%;
    height: auto;
}

.activityCard_1 {
    max-width: 25%;
    min-width: 330px;

    border: 3px solid rgba(52, 163, 207, 0.842);
}

.activityImg_1 {
    width: 100%;
    height: 360px;
    border-radius: .7rem .7rem 0 0 ;
    object-fit: cover; 
}

.activityContainer-Img2-Img3 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: 25%;
    min-width: 330px;

}

.activityCard_2 {
    
}

.activityImg_2 {
    border-radius: .7rem .7rem 0 0 ; 
    width: 100%;
    height: 130px;
    object-fit: cover;
}

.activityCard_3 {

}
.activityImg_3 {
    border-radius: .7rem .7rem 0 0 ; 
    width: 100%;
    height: 130px;
    object-fit: cover;
}

.activityCard_4 {
    max-width: 25%;
    min-width: 330px;

}

.activityImg_4 {
    border-radius: .7rem .7rem 0 0 ; 
    width: 100%;
    height: 360px;
    object-fit: cover;
}


.activityContainer-Img5-Img6 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: 25%;
    min-width: 330px;
}
.activityCard_5 {

}

.activityImg_5 {
    border-radius: .7rem .7rem 0 0 ; 
    width: 100%;
    height: 130px;
    object-fit: cover;
}

.activityCard_6 {
    
}

.activityImg_6 {
    border-radius: .7rem .7rem 0 0 ; 
    width: 100%;
    height: 130px;
    object-fit: cover;
}

.activityText {
    font-size: 1rem;
    font-weight: 700;
    margin: 1em 0.5em; 
}

/* footer */

.footer {
    max-width: 1500px;
    margin:auto;
    background-color: var(--greyBackgd);
    margin-top: 50px;
    padding: 1rem;
    margin-bottom: 5px;
}

.footerContainer {
    display: flex;
    margin: 1rem;
}

.footerBloc {
    width: 33%;
    display: flex;
    flex-direction: column;
}

.footerTitle {
    font-weight: bold;
    padding: .5em;
}

.footerLink {
    padding-top: .5em;
    padding-left: .5em;
}

.footerLink:hover {
    text-decoration: underline;
    transition:  text-decoration .5s;
}

